# pyaspenplus

./: .gitignore  LICENSE  README.md  demo_fyp_model.py  pyproject.toml
pyaspenplus/: __init__.py
pyaspenplus/core/: __init__.py  batch_runner.py  bkp_parser.py  bkp_writer.py  com_adapter.py  metadata.py  simulation.py
pyaspenplus/economics/: __init__.py  apea.py  capex.py  costing.py  opex.py
pyaspenplus/examples/: __init__.py
pyaspenplus/examples/methanol/: __init__.py  kinetics.py  synthesis.py
pyaspenplus/integrations/: __init__.py  cantera_adapter.py  chemics_adapter.py  chemlib_adapter.py  coolprop_adapter.py  matplotlib_adapter.py  polykin_adapter.py  pychemengg_adapter.py
pyaspenplus/materials/: __init__.py  components.py  feed.py
pyaspenplus/models/: __init__.py  blocks.py  flowsheet.py  streams.py
pyaspenplus/optimization/: __init__.py  base.py  bayesian_opt.py  evolutionary.py  pyomo_opt.py  scipy_opt.py  variable.py
pyaspenplus/reactions/: __init__.py  reaction.py
pyaspenplus/utils/: __init__.py  logger.py  units.py
pyaspenplus/visualization/: __init__.py  flowsheet_diagram.py
tests/: test_bkp_parser.py  test_bkp_writer.py  test_economics.py  test_integrations.py  test_methanol.py  test_models.py  test_optimization.py  test_reactions.py  test_simulation.py  test_units.py
